# bier-eval

./: .gitignore  README.md  pyproject.toml
bier_benches/: __init__.py  beir_eval.py  cli.py
bier_benches/backends/: __init__.py  qdrant_backend.py
bier_eval/: __init__.py  beir_eval.py  cli.py  corpus.py  encoders.py  protocols.py
bier_eval/backends/: __init__.py  elasticsearch_backend.py  faiss_backend.py  tantivy_backend.py
