[project]
name = "bier-eval"
version = "0.1.0"
description = "Pluggable BEIR-style retrieval: swap encoders (dense) and engines (FAISS, Qdrant, Elasticsearch, Tantivy)."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "beir>=2.0.0",
]

[project.optional-dependencies]
faiss = ["faiss-cpu>=1.7.4"]
qdrant = ["qdrant-client>=1.7.0"]
elasticsearch = ["elasticsearch>=8.12.0"]
tantivy = ["tantivy>=0.22.0"]
encoders = ["sentence-transformers>=2.7.0", "torch>=2.1.0"]
all = [
  "faiss-cpu>=1.7.4",
  "qdrant-client>=1.7.0",
  "elasticsearch>=8.12.0",
  "tantivy>=0.22.0",
  "sentence-transformers>=2.7.0",
  "torch>=2.1.0",
]

[project.scripts]
bier-eval = "bier_eval.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bier_eval"]
